# quantum-engine

./: CMakeLists.txt  LICENSE  bitbucket-pipelines.yml
examples/: CMakeLists.txt  example.cpp
qengine/: CMakeLists.txt
qengine/include/: circuit.h  creg.h  ireg.h  qreg.h  qudit.h
qengine/src/: main.cpp
qengine/utils/: math_operations.h  matrix.h  rand_num_engine.h  square_matrix.h  types.h
tests/: CMakeLists.txt
tests/cmake/: functions.cmake
tests/qengine/include/: CMakeLists.txt  circuit_test.cpp  creg_tests.cpp  qreg_tests.cpp  qudit_tests.cpp
tests/qengine/utils/: CMakeLists.txt  math_operations_test.cpp  math_operations_tests.cpp  matrix_tests.cpp  unit_test.cpp
